--- a/base.properties
+++ b/base.properties
@@ -1,1 +1,9 @@
-futureWeeks=8
+jobId=xxxxxxx
+output=hdfs://ss-omg-5-v2/user/AD/om_contract
+dates=20210901:20210910
+convDates=20210901:20210910
+account=华为
+dataSource=TIANJI,CUSTOMER,APP_ACTION
+dataSource.TIANJI.brand=6,6
+dataSource.TIANJI.series=6001,6002
+dataSource.TIANJI.products=60010065
